fix alignment with tab cloak items

--- a/public/style.css
+++ b/public/style.css
@@ -11,7 +11,6 @@ body {
     width: 100%;
     height: 100%;
     font-family: 'Inter', sans-serif;
-    font-size: 1.375rem;
 }
 
 body {
@@ -500,6 +499,17 @@ body {
     box-shadow: 0 0.1875rem 0.375rem rgba(0, 0, 0, 0.2);
 }
 
+.tab-cloak-item {
+    display: flex;
+    align-items: center;
+}
+
+.tab-cloak-icon {
+    margin: 0.125rem 1rem 0.125rem 0rem;
+    width: 1.5rem;
+    height: 1.5rem;
+}
+
 .themebutton:hover,
 .tabbutton:hover {
     background-color: #104f8b;
@@ -533,7 +543,6 @@ body {
 
 .dropdown-content a,
 .dropdown-content2 a {
-    display: block;
     padding: 0.625rem 0.9375rem;
     color: #b3c2df;
     text-decoration: none;
